# ChangeLog for app-editors/emacs-cvs
# Copyright 1999-2007 Gentoo Foundation; Distributed under the GPL v2
# $Header: $

  18 Jun 2007; Christian Faulhammer <opfer@gentoo.org>
  emacs-cvs-23.0.51.ebuild:
  remove Xawd3d patch (added upstream)

  09 Jun 2007; Ulrich Mueller <ulm@gentoo.org> emacs-cvs-23.0.51.ebuild,
  -files/emacs-cvs-disable_alsa_detection.patch,
  +files/emacs-cvs-disable_alsa_detection-r1.patch:
  Sync ebuild with version in Portage. Fix alsa patch.

  23 May 2007; Ulrich Mueller <ulm@gentoo.org> emacs-cvs-23.0.51.ebuild:
  Sync ebuild with latest versions in Portage.

  13 May 2007; Ulrich Mueller <ulm@gentoo.org>
  +files/emacs-cvs-Xaw3d-headers.patch, +emacs-cvs-23.0.51.ebuild,
  +files/emacs-cvs-disable_alsa_detection.patch,
  +files/emacs-cvs-freebsd-sparc.patch, +metadata.xml:
  Live CVS ebuild for the Emacs multi-tty branch.
