@@ -1,6 +1,6 @@
 AUX emacs-cvs-Xaw3d-headers.patch 2045 RMD160 96b8ce942b83a5177c965a9a3a485496eb672c67 SHA1 a04c98c22ed9608ac6d81db0b9031da9a5b115db SHA256 ed1ad532e6476a0c2311e2c76db82035455948ace4dffb17b3e6493ec22af59c
 AUX emacs-cvs-disable_alsa_detection-r1.patch 1573 RMD160 e41972bc7c8c6ce80128046ee134acc7903fef2b SHA1 bdb460012bd526d336e97cb7f6b7e9c852da5be4 SHA256 afab81ebc4ac289c6f2ff4cd93f3f10a29bed3e55d463b337ab8711f6ff8cfcc
 AUX emacs-cvs-freebsd-sparc.patch 475 RMD160 a8e6e3f2bc014979fd269a027835a65520c12417 SHA1 71c6d9ee3b3e5149a33d440373a212b56fbd064c SHA256 43584ea923e6c7221e69d1d6a14d55d386565c5decd067a62acc58af522c803b
-EBUILD emacs-cvs-23.0.51.ebuild 7614 RMD160 9ae2a1446feb51fdd53a514e3b266a6284d5a209 SHA1 809a2d33cdb1571d6e35847e2dca52d68d8d2615 SHA256 961801bd63c2198f81aac10786148bae7d23606c31ed4796b6ddb41b1609a98c
-MISC ChangeLog 865 RMD160 ced8d261152844ff3a75d7dd2804a16338e907ab SHA1 a10023047b512bebf45555aa8b387725ca1c694e SHA256 320e27ebbf8bfa7642a1d24e0d9b97ec2b478246c9592277fdc48b2503a3468d
+EBUILD emacs-cvs-23.0.51.ebuild 7543 RMD160 679ac06d129f8837ccd4edb501dc6815dfd4bcee SHA1 79cc118277a8dd451fd20d849dde24376357c0c5 SHA256 d711405678d0b276670ce0996604cf163a7b9adf46228513d8b827735687abef
+MISC ChangeLog 994 RMD160 049288183c4d7682e2181667a0001d8882ed7fd9 SHA1 05ef2c3b03d2bdc72ce5846f31653d6dd531323f SHA256 fe2fb1977d30b9da41f50ef5f82a7fb26fb099a3e68482d647358e661f933ec4
 MISC metadata.xml 158 RMD160 415d172437ca754d24fc5ab186ba8e77934d96e4 SHA1 61f6eff9729cd87a725c2a70c81aca4270a17fc4 SHA256 1393bdef3a74343fdb40a112c7096a1af16f67e7a43413250de28dfe73810eab
